2010-09-20  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkGenStubs.tcl: clean-up, port all genStubs.tcl changes
	* generic/ttk/ttk.decls:    from Tcl to ttkGenStubs.tcl as well (no
	* generic/tk.decls:         change in any output files). This brings
	* generic/tkInt.decls:      all *.decls in the same form as tcl.decls

2010-09-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinX.c (_WIN32_IE): update to IE5.5 base expectation

2010-09-14  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc       [FRQ 2965056]: Windows build with -DUNICODE
	* win/Makefile.in

2010-09-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWin.h          Move definitions of WINVER/_WIN32_WINNT
	* win/tkWinDialog.h    to one place, now that we only support
	* win/tkWinMenu.c      Win2000+
	* win/tkWinX.c

2010-09-10  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinEmbed.c:     Make compilable with -DUNICODE
	* win/tkWinClipboard.c: Mark those files as not compilable with
	* win/tkWinColor.c:     -DUNICODE, so add a TODO.
	* win/tkWinCursor.c:
	* win/tkWinDialog.c:
	* win/tkWinFont.c:
	* win/tkWinMenu.c:
	* win/tkWinPixmap.c:
	* win/tkWinTest.c:
	* win/tkWinWm.c:
	* win/tkWinX.c:
	* win/winMain.c:
	* win/tkWinPort.h:  mingw/cygwin fixes: <tchar.h> should always
	be included here.

2010-09-09  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc:   (sync with tcl version)
	* win/makefile.vc: mingw should always link with -ladvapi32
	* win/tcl.m4:
	* win/configure:   (regenerated)
	* win/tkWinInt.h:  Remove ascii variant of tkWinPocs table,
	* win/tkWinX.c:    it is no longer necessary.
	* win/tkWinTest.c:

2010-09-08  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c(TreeviewSeeCommand):
	Schedule redisplay if [$tv see] opens any items [Bug#2829363].

2010-09-05  Donal K. Fellows  <dkf@users.sf.net>

	* library/bgerror.tcl: [Bugs 3046742,3046750]: Improve keybindings for
	the background error dialog, and allow the use of the window manager